@startuml

title __PATTERNS's Class Diagram__\n

  namespace  {
    abstract class Amenities {
    }
  }
  

  namespace  {
    class DeluxeRoom {
    }
  }
  

  namespace  {
    class FoodBar {
    }
  }
  

  namespace  {
    class MasterRoach {
    }
  }
  

  namespace  {
    interface Payment {
    }
  }
  

  namespace  {
    class RefillBar {
    }
  }
  

  namespace  {
    class RegularRoom {
    }
  }
  

  namespace  {
    class RoachColony {
    }
  }
  

  namespace  {
    class RoachMotel {
    }
  }
  

  namespace  {
    class RoachMotelTester {
    }
  }
  

  namespace  {
    class RoachPal {
    }
  }
  

  namespace  {
    abstract class Room {
    }
  }
  

  namespace  {
    class RoomFactory {
    }
  }
  

  namespace  {
    abstract class RoomMakerAbstract {
    }
  }
  

  namespace  {
    class Shower {
    }
  }
  

  namespace  {
    class Spa {
    }
  }
  

  namespace  {
    class Suite {
    }
  }
  

  Amenities -up-|> Room
  DeluxeRoom -up-|> Room
  FoodBar -up-|> Amenities
  FoodBar o-- Room : RoomType
  MasterRoach .up.|> Payment
  RefillBar -up-|> Amenities
  RefillBar o-- Room : RoomType
  RegularRoom -up-|> Room
  RoachColony o-- Room : Room
  RoachPal .up.|> Payment
  Room o-- RoachColony : customer
  RoomFactory -up-|> RoomMakerAbstract
  Shower -up-|> Amenities
  Shower o-- Room : RoomType
  Spa -up-|> Amenities
  Spa o-- Room : RoomType
  Suite -up-|> Room


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
